--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pilihan Organisasi Kampus</title>
+  <title>CLUB WIRAUSAHA UNUJA</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gradient-to-br from-gray-900 via-blue-900 to-black min-h-screen flex items-center justify-center font-sans">
   <div class="max-w-6xl w-full p-6">
     <!-- Header -->
-    <div class="text-center mb-10">
-      <img src="logo1.jpg" alt="Logo Organisasi" class="mx-auto w-28 h-28 rounded-full border-4 border-white shadow-xl">
-      <h1 class="text-4xl font-bold text-white mt-4">Club Wirausaha UNUJA</h1>
-      <p class="text-gray-300 mt-2">Ketua: <span class="text-white font-semibold">Rica rachmawati</span> | Periode 2025 - 2026</p>
-    </div>
+    <!-- Header -->
+<div class="text-center mb-10">
+  <img src="logo1.jpg" alt="Logo Organisasi" class="mx-auto w-28 h-28 rounded-full border-4 border-white shadow-xl">
+  <h1 class="text-4xl font-bold text-white mt-4">Club Wirausaha UNUJA</h1>
+  <!-- Pisahkan ketua & periode -->
+  <p class="text-gray-300 mt-2 flex flex-col sm:flex-row justify-center items-center gap-2">
+    <span>Ketua: <span class="text-white font-semibold">Rica Rachmawati</span></span>
+    <span class="sm:before:content-['|'] sm:before:mx-2">Periode 2025 - 2026</span>
+  </p>
+</div>
+
 
     <!-- Deskripsi Organisasi -->
     <div class="text-center mb-12">
