--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h3 class="text-white font-semibold">Mentoring</h3>
       </div>
 
-      <div onclick="openModal('Networking','Bangun jaringan relasi antar mahasiswa, dosen, dan pelaku bisnis di lingkungan Club Wirausaha UNUJA. Manfaatkan peluang kolaborasi, belajar dari pengalaman, dan perluas koneksi yang mendukung karier dan usaha. Jadilah bagian dari ekosistem inspiratif kami!')" 
+      <div onclick="openModal('Networking','Bangun jaringan relasi antar mahasiswa, dosen, dan pelaku bisnis di lingkungan UNIVERSITAS NURUL JADID. Manfaatkan peluang kolaborasi, belajar dari pengalaman, dan perluas koneksi yang mendukung karier dan usaha. Jadilah bagian dari ekosistem inspiratif kami!')" 
            class="cursor-pointer bg-white/10 rounded-2xl p-6 border border-white/20 shadow-xl hover:scale-105 transition">
         <img src="https://cdn-icons-png.flaticon.com/512/1256/1256650.png" class="w-12 h-12 mx-auto mb-3" alt="Networking">
         <h3 class="text-white font-semibold">Networking</h3>
@@ -164,3 +164,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
