--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" class="w-10 h-10" alt="WhatsApp">
             <h2 class="text-xl font-bold text-white">WhatsApp</h2>
           </div>
-          <a href="https://wa.me/6285176871609?text=Halo%20Kak%2C%20saya%20tertarik%20gabung%20di%20Club%20Wirausaha%20UNUJA.%0AMohon%20info%20lebih%20lanjut%20ya%20🙏😊" 
+          <a href="#" 
              target="_blank" 
-             onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Fitur ini belum tersedia 🙂');}" 
+             onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Fitur Belum Diaktifkan');}" 
              class="shine-btn px-3 py-1 rounded-lg bg-green-500 text-white text-sm font-semibold hover:scale-105 transition">
             Chat
           </a>
@@ -164,4 +164,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
