--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <a href="#" 
              target="_blank" 
-             onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Fitur Belum Diaktifkan');}" 
+             onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Admin BADMOOD :(');}" 
              class="shine-btn px-3 py-1 rounded-lg bg-green-500 text-white text-sm font-semibold hover:scale-105 transition">
             Chat
           </a>
@@ -164,5 +164,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
