--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <!-- Tombol Daftar (center hp & laptop) -->
       <div class="col-span-full flex justify-center mt-6">
         <a href="#" 
-           onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Pendaftaran belum dibuka');}" 
+           onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Pendaftaran Dibuka 1-15 Oktober 2025');}" 
            class="relative block w-full text-center py-3 rounded-xl 
                   bg-gradient-to-r from-blue-500 via-indigo-600 to-purple-600 
                   text-white font-semibold text-lg shadow-lg 
@@ -164,6 +164,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
