--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
              target="_blank" 
              onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Admin BADMOOD :(');}" 
              class="shine-btn px-3 py-1 rounded-lg bg-green-500 text-white text-sm font-semibold hover:scale-105 transition">
-            Chat
+            Admin
           </a>
         </div>
         <p class="text-gray-300 text-sm mb-4">Hubungi admin atau ikuti saluran resmi kami.</p>
@@ -164,6 +164,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
