--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" class="w-10 h-10" alt="WhatsApp">
             <h2 class="text-xl font-bold text-white">WhatsApp</h2>
           </div>
-          <a href="https://wa.me/6285385518248?text=Assalamualaikum%20Kak%2C%20saya%20ingin%20tahu%20lebih%20lanjut%20tentang%20Club%20Wirausaha%20UNUJA.%0ABisa%20dishare%20info%20pendaftaran%20dan%20kegiatannya%3F%20%F0%9F%99%8F" 
+          <a href="#" 
              target="_blank" 
-             onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Admin BADMOOD :(');}" 
+             onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Contact Admin dibuka tgl 20 September 2025');}" 
              class="shine-btn px-3 py-1 rounded-lg bg-green-500 text-white text-sm font-semibold hover:scale-105 transition">
             Admin
           </a>
@@ -164,6 +164,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
