--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </a>
         </div>
         <p class="text-gray-300 text-sm mb-4">Hubungi admin atau ikuti saluran resmi kami.</p>
-        <a href="#" target="_blank" 
+        <a href="https://whatsapp.com/channel/0029Vb6W0kvFSAsvm6ozaY36" target="_blank" 
            onclick="if(this.getAttribute('href')==='#'){event.preventDefault(); alert('Fitur Belum Diaktifkan');}" 
            class="shine-btn block w-full text-center py-2 rounded-lg bg-green-600 text-white font-semibold hover:scale-105 transition">
           Saluran WA
@@ -164,6 +164,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
