--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
   <div id="app" class="flex-1 flex items-center justify-center p-6"></div>
 
   <!-- Footer -->
-  <footer class="text-center py-4 text-sm text-gray-400 border-t border-white/20">
-    © 2025 Club Wirausaha UNUJA. Semua Hak Dilindungi.
-  </footer>
+<!-- Footer -->
+<footer class="fixed bottom-0 left-0 w-full text-center py-4 text-sm text-gray-400 border-t border-white/20 bg-black/40 backdrop-blur-md">
+  © 2025 Club Wirausaha UNUJA. Semua Hak Dilindungi.
+</footer>
+
 
   <script src="script.js"></script>
 </body>
 </html>
+
