--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gradient-to-br from-gray-900 via-blue-900 to-black min-h-screen flex flex-col font-sans">
-  
-  <!-- Root app -->
-  <div id="app" class="flex-1 flex items-center justify-center p-6"></div>
 
-  <!-- Footer -->
-<!-- Footer -->
-<footer class="fixed bottom-0 left-0 w-full text-center py-4 text-sm text-gray-400 border-t border-white/20 bg-black/40 backdrop-blur-md">
-  © 2025 Club Wirausaha UNUJA. Semua Hak Dilindungi.
-</footer>
+  <div id="app" class="flex-1 p-6"></div>
 
+  <footer class="text-center py-4 text-sm text-gray-400 border-t border-white/20">
+    © 2025 Club Wirausaha UNUJA. Semua Hak Dilindungi.
+  </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
