--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="bg-gradient-to-br from-gray-900 via-blue-900 to-black min-h-screen flex flex-col font-sans">
 
-  <div id="app" class="flex-1 p-6"></div>
-
+  <div id="app" class="flex-grow flex items-center justify-center p-6"></div>
+ 
   <footer class="text-center py-4 text-sm text-gray-400 border-t border-white/20">
     © 2025 Club Wirausaha UNUJA. Semua Hak Dilindungi.
   </footer>
