--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gradient-to-br from-gray-900 via-blue-900 to-black min-h-screen flex flex-col font-sans">
-
-  <div id="app" class="flex-grow flex items-center justify-center p-6"></div>
- 
-  <footer class="text-center py-4 text-sm text-gray-400 border-t border-white/20">
-    © 2025 Club Wirausaha UNUJA. Semua Hak Dilindungi.
-  </footer>
+  
+  <!-- Root app -->
+  <div id="app" class="flex-1 flex items-center justify-center p-6"></div>
 
   <script src="script.js"></script>
 </body>
+
+<footer class="text-center py-4 text-sm text-gray-400 border-t border-white/20">
+    © 2025 Club Wirausaha UNUJA. Semua Hak Dilindungi.
+  </footer>
 </html>
