--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <!-- Root app -->
   <div id="app" class="flex-1 flex items-center justify-center p-6"></div>
 
-  <script src="script.js"></script>
-</body>
-
-<footer class="text-center py-4 text-sm text-gray-400 border-t border-white/20">
+  <!-- Footer -->
+  <footer class="text-center py-4 text-sm text-gray-400 border-t border-white/20">
     © 2025 Club Wirausaha UNUJA. Semua Hak Dilindungi.
   </footer>
+
+  <script src="script.js"></script>
+</body>
 </html>
